objects/amazonconnect__Amazon_Connect__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings of the Toolkit for Amazon Connect.</description>
    <fields>
        <fullName>amazonconnect__disableCCACase__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Choose to enable or disable the AC_AssociateCCACase trigger, which associates a Case with a Contact Channel Analytics record.</description>
        <inlineHelpText>Choose to enable or disable the AC_AssociateCCACase trigger, which associates a Case with a Contact Channel Analytics record.</inlineHelpText>
        <label>Disable the CCA Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__disableCCAContact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Choose to enable or disable the AC_AssociateCCAContact trigger, which associates a Contact with a Contact Channel Analytics record.</description>
        <inlineHelpText>Choose to enable or disable the AC_AssociateCCAContact trigger, which associates a Contact with a Contact Channel Analytics record.</inlineHelpText>
        <label>Disable the CCA Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__disableCaseContactCCA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Choose to enable or disable the AC_AssociateCaseContactCCA trigger, which associates Cases and Contacts with a Contact Channel Analytics Record.</description>
        <inlineHelpText>Choose to enable or disable the AC_AssociateCaseContactCCA trigger, which associates Cases and Contacts with a Contact Channel Analytics Record.</inlineHelpText>
        <label>Disable the Case Contact CCA Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__disableTaskTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Choose to enable or disable the AC_TaskTrigger</description>
        <inlineHelpText>This trigger creates a ContactChannel record for any inserted/updated task that with a `CallObject` field that does not currently have a ContactChannel record created before.</inlineHelpText>
        <label>Disable the Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__disableVoiceIdTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Choose to enable or disable the AC_VoiceIdChannel trigger, which associates Cases and Contacts with a Voice Id Channel Record.</description>
        <inlineHelpText>Choose to enable or disable the AC_VoiceIdChannel trigger, which associates Cases and Contacts with a Voice Id Channel Record</inlineHelpText>
        <label>Disable the Voice Id Channel Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__url__c</fullName>
        <description>Top level URL of your Amazon Connect instance.</description>
        <inlineHelpText>Please provide the URL for the domain of your Amazon Connect instance, for example https://yourinstancename.awsapps.com</inlineHelpText>
        <label>Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Toolkit for Amazon Connect</label>
</CustomObject>